<resources>
    <string name="app_name">Vamos Rachar !</string>
    <string name="title1">Vamos</string>
    <string name="title2">Rachar !</string>
    <string name="money_prefix">R$</string>
    <string name="valor_initial">0.00</string>
    <string name="qtd_pessoas_initial">2</string>
    <string name="parcela">0.00</string>
    <string name="descricao">Quantidade de pessoas a dividir a conta</string>
    <string name="add_pessoa">Adiciona pessoas</string>
    <string name="minus_pessoa">Remove pessoas</string>
    <string name="tts">Ouvir texto</string>
    <string name="share">Compartilhar</string>
</resources>