<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/money_prefix"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/totalEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/totalEditText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="5"
        android:hint="@string/valor_initial"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <ImageView
        android:id="@+id/pessoasImageView"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:contentDescription="@string/descricao"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/pessoasTextView"
        app:srcCompat="@drawable/ic_pessoas_foreground" />

    <TextView
        android:id="@+id/resultadoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/parcela"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/totalEditText"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/totalEditText"
        app:layout_constraintTop_toBottomOf="@+id/pessoasTextView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/money_prefix"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/resultadoTextView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/compartilharFButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="true"
        android:contentDescription="@string/share"
        android:tint="#FFFFFF"
        app:fabCustomSize="70dp"
        app:fabSize="normal"
        app:layout_constraintEnd_toStartOf="@+id/lerFButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultadoTextView"
        app:maxImageSize="36dp"
        app:rippleColor="#CC961496"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/lerFButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="true"
        android:contentDescription="@string/tts"
        android:tint="#FFFFFF"
        app:fabCustomSize="70dp"
        app:fabSize="auto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/compartilharFButton"
        app:layout_constraintTop_toBottomOf="@+id/resultadoTextView"
        app:maxImageSize="36dp"
        app:rippleColor="#CC961496"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

    <ImageButton
        android:id="@+id/menosButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/minus_pessoa"
        app:layout_constraintEnd_toEndOf="@+id/maisButton"
        app:layout_constraintTop_toBottomOf="@+id/maisButton"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/maisButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_pessoa"
        app:layout_constraintEnd_toEndOf="@+id/totalEditText"
        app:layout_constraintTop_toTopOf="@+id/pessoasTextView"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <TextView
        android:id="@+id/pessoasTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/qtd_pessoas_initial"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/totalEditText"
        app:layout_constraintStart_toStartOf="@+id/totalEditText"
        app:layout_constraintTop_toBottomOf="@+id/totalEditText" />

    <TextView
        android:id="@+id/descricaoTextView"
        android:layout_width="334dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="@string/descricao"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/pessoasImageView"
        app:layout_constraintTop_toBottomOf="@+id/pessoasTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>